# vowpal-wabbit-java

./: .gitignore  LICENSE  README.md  allclasses-frame.html  allclasses-noframe.html  build.xml  c12e-ci.yml  common-parent-19.pom  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  ivy.xml  overview-frame.html  overview-summary.html  overview-tree.html  package-list  pom-gocd.xml  pom.xml  repo.cfg
vw_jni/: NOTICE.md  autogenerate-configure.sh  com_indeed_vw_wrapper_learner_VWActionProbsLearner.cc  com_indeed_vw_wrapper_learner_VWActionProbsLearner.h  com_indeed_vw_wrapper_learner_VWActionScoresLearner.cc  com_indeed_vw_wrapper_learner_VWActionScoresLearner.h  com_indeed_vw_wrapper_learner_VWFloatArrayLearner.cc  com_indeed_vw_wrapper_learner_VWFloatArrayLearner.h  com_indeed_vw_wrapper_learner_VWFloatLearner.cc  com_indeed_vw_wrapper_learner_VWFloatLearner.h  com_indeed_vw_wrapper_learner_VWIntArrayLearner.cc  com_indeed_vw_wrapper_learner_VWIntLearner.cc  com_indeed_vw_wrapper_learner_VWLearners.cc  com_indeed_vw_wrapper_learner_VWLearners.h  com_indeed_vw_wrapper_learner_VWMulticlassLearner.cc  com_indeed_vw_wrapper_learner_VWMulticlassLearner.h  com_indeed_vw_wrapper_learner_VWMultilabelsLearner.cc  com_indeed_vw_wrapper_learner_VWMultilabelsLearner.h  com_indeed_vw_wrapper_learner_VWProbLearner.cc  com_indeed_vw_wrapper_learner_VWProbLearner.h  com_indeed_vw_wrapper_learner_VWScalarLearner.cc  com_indeed_vw_wrapper_learner_VWScalarLearner.h  com_indeed_vw_wrapper_learner_VWScalarsLearner.cc  configure.ac  download-m4-plugins.sh  (+2 more)
(+191 files in other folders)
